Part 3 - Core elements/echo-server-pod-with-node-selector.yml
apiVersion: v1
kind: Pod
metadata:
  name: echo-server-po
spec:
  nodeSelector:
    type: secondary
  containers:
    - image: landrzejewski/echo-server:v1
      name: echo-server
      ports:
        - containerPort: 8080
