Part 3 - Core elements/echo-server-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: echo-server-po
spec:
  containers:
    - image: landrzejewski/echo-server:v1
      name: echo-server
      ports:
        - containerPort: 8080
