Part 3 - Core elements/echo-server-service-with-load-balance.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
  selector:
    app-name: echo-server-app
