Part 3 - Core elements/echo-server-service-with-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service-svc
spec:
  type: NodePort
  #sessionAffinity: ClientIP
  #externalTrafficPolicy: Local
  ports:
    - port: 80
      #targetPort: 8080
      targetPort: http
      nodePort: 30111
  selector:
    app-name: echo-server-app
