Part 3 - Core elements/echo-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service-svc
spec:
  ports:
    - port: 80
      #targetPort: 8080
      targetPort: http
  selector:
    app-name: echo-server-app
