Part 3 - Core elements/service-for-external-api.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-api-svc
subsets:
  - addresses:
      - ip: 62.129.231.51
    ports:
      - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: external-api-svc
spec:
  ports:
    - port: 80
